--- a/Web.config
+++ b/Web.config
@@ -42,8 +42,8 @@
 	    <!-- mail setting -->
 	    <add key="MailSMTP" value="smtp.gmail.com" />
 	    <add key="MailPort" value="587" />
-		<add key="MailAccount" value="naifcattle@gmail.com" />
-		<add key="MailPassword" value="qhecbjdxzyvssqvy" />
+		<add key="MailAccount" value="taifcattle@gmail.com" />
+		<add key="MailPassword" value="actpmzwonmyjjjim" />
 	    <!-- DNS setting-->
 	    <add key="SiteName" value="牛籍管理系統" />
 	    <add key="DNS_Name" value="http://211.22.64.113:82/taifCattle" />
