--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
   <connectionStrings>
-	<add name="SQL_Connection" connectionString="Data Source=211.22.64.113;Initial Catalog=taif_taifCattle;Persist Security Info=True;User ID=ift_techjob;Password=ift_techjob;pooling=false" providerName="System.Data.SqlClient" />
+	<add name="SQL_Connection" connectionString="Data Source=211.22.64.113;Initial Catalog=taif_taifCattle_farmEnc;Persist Security Info=True;User ID=ift_techjob;Password=ift_techjob;pooling=false" providerName="System.Data.SqlClient" />
   </connectionStrings>
 	<system.codedom>
 		<compilers>
