--- a/taifCattle.vbproj
+++ b/taifCattle.vbproj
@@ -313,6 +313,13 @@
       <DependentUpon>WebServiceLog.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="WebService\CattleCulling.aspx.designer.vb">
+      <DependentUpon>CattleCulling.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebService\CattleCulling.aspx.vb">
+      <DependentUpon>CattleCulling.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="_mp\mp_public.master.designer.vb">
       <DependentUpon>mp_public.master</DependentUpon>
     </Compile>
@@ -345,6 +352,7 @@
     <Content Include="Web.config" />
     <Compile Include="App_Code\Farm.vb" />
     <Compile Include="App_Code\WebService.vb" />
+    <Content Include="WebService\CattleCulling.aspx" />
     <Content Include="WebService\CattleUninsured.aspx" />
     <Content Include="_css\bootstrap-icons.css" />
     <Content Include="_css\bootstrap.css" />
